<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4sp"
    android:layout_marginBottom="4sp"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="8sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgStory"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:background="@color/shimmer_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:background="@color/shimmer_color"
            android:text="@string/shortPlaceholder"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/shimmer_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgStory"
            app:layout_constraintBottom_toTopOf="@id/tvDate"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:layout_marginBottom="2sp"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:background="@color/shimmer_color"
            android:text="@string/mediumPlaceholder"
            android:textColor="@color/shimmer_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>